// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderText handles the special case where there are pronouns in the name 1`] = `
<p>
  hey, 
  <span
    className="str-chat__message-mention"
    data-user-id="john"
  >
    @John (they/them)
  </span>
  , how are you?
</p>
`;

exports[`renderText handles the special case where there is a backslash in the name 1`] = `
<p>
  hey, 
  <span
    className="str-chat__message-mention"
    data-user-id="john"
  >
    @John\\Cena
  </span>
  , how are you?
</p>
`;

exports[`renderText handles the special case where there is a forward slash in the name 1`] = `
<p>
  hey, 
  <span
    className="str-chat__message-mention"
    data-user-id="john"
  >
    @John/Cena
  </span>
  , how are you?
</p>
`;

exports[`renderText handles the special case where there's at least one mention and @ symbol at the end 1`] = `
<p>
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   @
</p>
`;

exports[`renderText handles the special case where user name matches to an e-mail pattern - 1 1`] = `
<p>
  Hello 
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
  , is 
  <a
    className=""
    href="mailto:username@email.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
  >
    username@email.com
  </a>
   your @primary e-mail?
</p>
`;

exports[`renderText handles the special case where user name matches to an e-mail pattern - 2 1`] = `
<p>
  <a
    className=""
    href="mailto:username@email.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
  >
    username@email.com
  </a>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   is this the right address?
</p>
`;

exports[`renderText handles the special case where user name matches to an e-mail pattern - 3 1`] = `
<p>
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
</p>
`;

exports[`renderText handles the special case where user name matches to an e-mail pattern - 4 1`] = `
<p>
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <a
    className=""
    href="mailto:username@email.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
  >
    username@email.com
  </a>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
</p>
`;

exports[`renderText renders custom mention 1`] = `
<p>
  <span
    className="my-mention"
    data-mentioned-user-id="id-username@email.com"
    data-node-mentioned-user-id="id-username@email.com"
    data-node-mentionedUser-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="my-mention"
    data-mentioned-user-id="id-username@email.com"
    data-node-mentioned-user-id="id-username@email.com"
    data-node-mentionedUser-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <a
    className=""
    href="mailto:username@email.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
  >
    username@email.com
  </a>
   
  <span
    className="my-mention"
    data-mentioned-user-id="id-username@email.com"
    data-node-mentioned-user-id="id-username@email.com"
    data-node-mentionedUser-id="id-username@email.com"
  >
    @username@email.com
  </span>
</p>
`;

exports[`renderText renders remark-gfm list and strikethrough correctly 1`] = `
Array [
  <p>
    Pick a time to meet:
  </p>,
  "
",
  <ul>
    

    <li>
      Wednesday
    </li>
    

    <li>
      Thursday
    </li>
    

    <li>
      <del>
        Sunday
      </del>
    </li>
    

    <li>
      ~Monday~
    </li>
    

  </ul>,
]
`;

exports[`renderText renders standard markdown text 1`] = `
<p>
  Hi, shall we meet on 
  <strong>
    Tuesday
  </strong>
  ?
</p>
`;
